# Maatalys

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
migrations/: README  env.py
migrations/versions/: 530d5c65a6ec_update_user_model.py  67e5d51561a9_add_value_to_parameter_search.py  6beabfbf534d_initial_migration.py  cd3266117262_update_user_model.py  d55f67c9531d_add_search_and_parameter_search_models.py
src/: app.py  logger.py  teste_carga.py
src/auth/: auth.py  permission.py  routers.py  schemas.py  services.py
src/cloud/terraform/: ec2.tf  ecs.sh  ecs.tf  kafka.tf  main.tf  network.tf  rds.tf  terraform.tfvars  variables.tf
src/db/: base.py  session.py
src/investigation/: models.py  routers.py  schemas.py  services.py
src/local/: docker-compose.yaml
src/middleware/: db_middleware.py
src/parameter/: models.py  routers.py  schemas.py  services.py
src/parameter_search/: models.py  schemas.py  services.py
src/search/: models.py  routers.py  schemas.py  search_consumer.py  search_topics.py  services.py
src/streaming/: event_consumer_service.py  event_producer_service.py  event_registry.py  kafka_consumer_service.py  kafka_producer_service.py  kafka_settings.py
src/user/: models.py  routers.py  schemas.py  services.py
src/utils/: aws_handler.py  password_manager.py  s3_handler.py
