[tool.poetry]
name = "maatalys"
version = "0.1.0"
description = "FastAPI project with PostgreSQL and context managers."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"  # Compatible with Pydantic 2.x
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
python-multipart = "^0.0.5"
sqlalchemy = "^2.0.0"
bcrypt = "^4.2.1"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
